--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -1073,7 +1073,7 @@
 }
 
 .left_col {
-	background: #2a3f54;
+	background: #008c4b;
 }
 
 .container {
@@ -1351,7 +1351,7 @@ body .container.body .right_col {
 .nav_title {
 	width: 230px;
 	float: left;
-	background: #2a3f54;
+	background: #008c4b;
 	border-radius: 0;
 	height: 57px;
 	padding: 0px;
@@ -1814,7 +1814,7 @@ a:focus {
 
 .nav.child_menu li:hover,
 .nav.child_menu li.active {
-	background-color: rgba(255, 255, 255, 0.06);
+	background-color: #00736e;
 }
 
 .nav.child_menu li {
@@ -1876,7 +1876,7 @@ a:focus {
 }
 
 .nav li.current-page {
-	background: rgba(255, 255, 255, 0.05);
+	background: #008161;
 }
 
 .nav li li li.current-page {
@@ -2944,7 +2944,7 @@ span.right {
 	padding: 5px 0 0 0;
 	position: fixed;
 	width: 230px;
-	background: #2a3f54;
+	background: #008c4b;
 }
 
 .sidebar-footer a {
