perbaiki fungsi add modal

--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -1512,7 +1512,7 @@ body .container.body .right_col {
 
 body {
 	color: #73879c;
-	background: #2a3f54;
+	background: #008c4b;
 	font-family: "Helvetica Neue", Roboto, Arial, "Droid Sans", sans-serif;
 	font-size: 13px;
 	font-weight: 400;
