--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -1074,6 +1074,9 @@
 
 .left_col {
 	background: #008c4b;
+	/* position: sticky;
+	z-index: 1000;
+	height: 100vh; */
 }
 
 .container {
@@ -1105,7 +1108,7 @@
 }
 
 .nav-sm .container.body .right_col {
-	padding: 10px 20px;
+	padding: 10px 20px 24px;
 	margin-left: 70px;
 	z-index: 2;
 }
@@ -1344,7 +1347,7 @@ body .container.body .right_col {
 }
 
 .nav-md .container.body .right_col {
-	padding: 10px 20px 0;
+	padding: 10px 20px 24px;
 	margin-left: 230px;
 }
 
@@ -1513,6 +1516,7 @@ body .container.body .right_col {
 body {
 	color: #73879c;
 	background: #008c4b;
+	/* background: #f7f7f7; */
 	font-family: "Helvetica Neue", Roboto, Arial, "Droid Sans", sans-serif;
 	font-size: 13px;
 	font-weight: 400;
@@ -1522,6 +1526,7 @@ body {
 .main_container .top_nav {
 	display: block;
 	margin-left: 230px;
+	min-height: 30px;
 }
 
 .no-padding {
@@ -1535,7 +1540,7 @@ body {
 }
 
 .page-title .title_left {
-	width: 45%;
+	/* width: 45%; */
 	float: left;
 	display: block;
 }
